完成登录界面，为UserSQL添加了新方法